@@ -205,7 +205,7 @@ int zbar_image_write (const zbar_image_t *img,
     char filename[len];
     strcpy(filename, filebase);
     int n = 0;
-    if(*(char*)&img->format >= ' ')
+    if(img->format & 0xff >= ' ')
         n = snprintf(filename, len, "%s.%.4s.zimg",
                      filebase, (char*)&img->format);
     else
