@@ -35,10 +35,7 @@
 #include "symbol.h"
 #include "refcnt.h"
 
-/* adapted from v4l2 spec */
-#define fourcc(a, b, c, d)                      \
-    ((uint32_t)(a) | ((uint32_t)(b) << 8) |     \
-     ((uint32_t)(c) << 16) | ((uint32_t)(d) << 24))
+#define fourcc zbar_fourcc
 
 /* unpack size/location of component */
 #define RGB_SIZE(c)   ((c) >> 5)
